--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "env-cmd": "^10.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.1.3"
   }
 }
