--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "build": "npx tsc",
+    "start:installation": "npm i",
     "start:dev": "env-cmd -f ./environments/.env.local ts-node-dev --respawn src/app.ts",
     "start:prod": "npm run build && env-cmd -f ./environments/.env.prod node src/app.js"
   },
@@ -20,6 +21,7 @@
   "dependencies": {
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "pentagon-server": "file:"
   }
 }
