--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server:installation": "npm i && npm run start:installation --prefix server",
-    "server:dev": "npm run start:dev --prefix server"
+    "start:installation": "npm i && npm run server:installation && npm run client:installation",
+    "start:dev": "concurrently \"npm run server:dev\" \"npm run client:dev\" ",
+    "server:installation": "npm run start:installation --prefix server",
+    "server:dev": "npm run start:dev --prefix server",
+    "client:installation": "npm run start:installation --prefix client",
+    "client:dev": "npm run start:dev --prefix client"
   },
   "keywords": [],
   "author": "",
