--- a/pentagon-server/package.json
+++ b/pentagon-server/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/terminus": "^10.2.3",
     "pentagon-server": "file:",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -66,6 +67,12 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "coverageThreshold": {
+      "global": {
+        "lines": 95
+      }
+    }
   }
 }
