--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "winston": "^3.13.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.2"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -45,5 +47,17 @@
         "lines": 95
       }
     }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run test -- --bail --findRelatedTests",
+      "npm run lint",
+      "git add"
+    ]
   }
 }
