--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "server:installation": "npm run start:installation --prefix pentagon-server",
     "server:dev": "npm run start:dev --prefix pentagon-server",
     "client:installation": "npm run start:installation --prefix pentagon-client",
-    "client:dev": "npm run start:dev --prefix pentagon-client"
+    "client:dev": "npm run start:dev --prefix pentagon-client",
+    "precommit": "npm run test"
   },
   "keywords": [],
   "author": "",
@@ -50,7 +51,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "husky pre-commit"
+      "pre-commit": "npm run precommit"
     }
   },
   "lint-staged": {
