--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "devDependencies": {
     "husky": "^9.0.11",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.2"
+    "jest": "^29.7.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -51,13 +50,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run precommit"
+      "pre-commit": "npm run test"
     }
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "npm run test -- --bail --findRelatedTests",
-      "git add"
-    ]
   }
 }
