TASK-001 | added create client

--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "**/*.(t|j)s",
+      "!**/utils/**",
+      "!**/logger/winston.config.ts",
+      "!**/*.dto.ts",
+      "!**/main.ts"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
