--- a/pentagon-server/package.json
+++ b/pentagon-server/package.json
@@ -31,9 +31,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.3.2",
+    "nestjs-cls": "^4.3.0",
     "pentagon-server": "file:",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
